--- a/08b-be_mongoose/package.json
+++ b/08b-be_mongoose/package.json
@@ -18,6 +18,7 @@
     "grunt": "^0.4.5",
     "supertest": "^0.13.0",
     "chai": "^1.10.0",
-    "should": "^4.6.2"
+    "should": "^4.6.2",
+    "moment": "^2.9.0"
   }
 }
